scripts/nullaway/annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8.txt
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/controller/Controller.java:57: error: [NullAway] dereferenced expression evaluator is @Nullable
			double evaluation = evaluator.calculateProfitLoss();
			                             ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/evaluator/TradeStrategyEvaluator.java:48: error: [NullAway] dereferenced expression ask is @Nullable
			profit += ask.evaluateTrade();
			             ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/order/Order.java:80: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return dateTime;
		^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/view/TradeGraphPlotter.java:54: error: [NullAway] dereferenced expression ask is @Nullable
			askData.add(new Millisecond(ask.getAskOrder().getDateTime()), ask.getAskOrder().getPrice());
			                               ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/view/RunnerGUI.java:174: error: [NullAway] dereferenced expression controller.getEvaluator() is @Nullable
						controller.getEvaluator().getTradePair());
						                         ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/OrderBuilderImpl.java:68: error: [NullAway] dereferenced expression order.getPrice() is @Nullable
		if (!order.getPrice().isEmpty()) {
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/OrderBuilderImpl.java:73: error: [NullAway] dereferenced expression order.getVolume() is @Nullable
		if (!order.getVolume().isEmpty()) {
		                      ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/implementations/OrderBuilderImpl.java:102: error: [NullAway] passing @Nullable parameter 'dateTime' where @NonNull is required
							dateTime, 
							^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:193: error: [NullAway] dereferenced expression tradeList is @Nullable
		int maxIterations = tradeList.size()/lookBackPeriod;
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/generator/TradeSignalGenerator.java:266: error: [NullAway] dereferenced expression tradeList is @Nullable
		int maxIterations = tradeList.size()/lookBackPeriod;
		                             ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
